pkg/lang/testdata/ub/stack-values/valid/input-interpolation-static.ub
factory: {
  inputs: { s: $'n={{1}}' }
}
