pkg/lang/testdata/ub/stack-values/invalid/factory-duplicate-key.ub
factory: {
  inputs: { a: 'x' }
  inputs: { b: 'y' }
}
